[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tkflexbox"
version = "0.1.0"
authors = [{name = "Daniel Hitchcock", email = "dan@madeupemail.com"}]
description = "Implements flexbox like functionality to tkinter. Makes creating a reactive GUI far easier."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/w50111831/tkflexbox"
